--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,5 +2,8 @@
     <PropertyGroup>
         <Version>0.0.0</Version>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <TargetFramework>net8.0</TargetFramework>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 </Project>
