--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -3,7 +3,8 @@
         <Version>0.0.0</Version>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <TargetFramework>net8.0</TargetFramework>
-        <Nullable>enable</Nullable>
+        <LangVersion>12.0</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 </Project>
