--- a/src/Otw.WebApp/Otw.WebApp.csproj
+++ b/src/Otw.WebApp/Otw.WebApp.csproj
@@ -5,4 +5,8 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.20" PrivateAssets="all"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Otw.Core\Otw.Core.csproj" />
+    </ItemGroup>
+
 </Project>
