--- a/src/Otw.Core/Otw.Core.csproj
+++ b/src/Otw.Core/Otw.Core.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+    <PackageReference Include="Microsoft.JSInterop" Version="8.0.20" />
   </ItemGroup>
 </Project>
