Remove Counter and Weather components, adjust NavMenu, and exclude sample-data/weather.json from project

--- a/src/Otw.WebApp/Otw.WebApp.csproj
+++ b/src/Otw.WebApp/Otw.WebApp.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\Otw.Core\Otw.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\sample-data\weather.json" />
+    </ItemGroup>
+
 </Project>
