--- a/src/Otw.WebApp/Otw.WebApp.csproj
+++ b/src/Otw.WebApp/Otw.WebApp.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
-
+    
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.20"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.20" PrivateAssets="all"/>
+        <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.22" />
     </ItemGroup>
 
     <ItemGroup>
